tests/ui/delegation/generics/const-predicates-ice-158675.stderr
error: the constant `N` is not of type `bool`
  --> $DIR/const-predicates-ice-158675.rs:11:29
   |
LL |         reuse Trait::<S<N>, N>::fun;
   |                             ^ expected `bool`, found `usize`
   |
note: required by a const generic parameter in `original_ice::Trait::fun`
  --> $DIR/const-predicates-ice-158675.rs:6:20
   |
LL |     trait Trait<T, const B: bool> {
   |                    ^^^^^^^^^^^^^ required by this const generic parameter in `Trait::fun`
LL |         fn fun();
   |            --- required by a bound in this associated function

error: the constant `N` is not of type `bool`
  --> $DIR/const-predicates-ice-158675.rs:24:29
   |
LL |         reuse Trait::<S<N>, N>::fun::<N>;
   |                             ^ expected `bool`, found `usize`
   |
note: required by a const generic parameter in `with_child_constants::Trait::fun`
  --> $DIR/const-predicates-ice-158675.rs:19:20
   |
LL |     trait Trait<T, const B: bool> {
   |                    ^^^^^^^^^^^^^ required by this const generic parameter in `Trait::fun`
LL |         fn fun<const C: char>();
   |            --- required by a bound in this associated function

error: the constant `N` is not of type `char`
  --> $DIR/const-predicates-ice-158675.rs:24:39
   |
LL |         reuse Trait::<S<N>, N>::fun::<N>;
   |                                       ^ expected `char`, found `usize`
   |
note: required by a const generic parameter in `with_child_constants::Trait::fun`
  --> $DIR/const-predicates-ice-158675.rs:20:16
   |
LL |         fn fun<const C: char>();
   |                ^^^^^^^^^^^^^ required by this const generic parameter in `Trait::fun`

error: aborting due to 3 previous errors

